--- a/src/css/common.css
+++ b/src/css/common.css
@@ -3,16 +3,31 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell,
+    'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+  padding: 15px;
 }
 
 img {
   display: block;
   max-width: 100%;
+}
+
+input {
+  margin-bottom: 15px;
+  text-align: center;
+}
+.timer {
+  display: flex;
+  font-family: arial;
+  font-weight: bold;
+}
+
+.timer .field:not(:last-child) {
+  margin-right: 15px;
 }
